// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronUpIcon when asked to render renders 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m18 15-6-6-6 6"
  />
</svg>
`;

exports[`ChevronUpIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m18 15-6-6-6 6"
  />
</svg>
`;
